Fixed iframe size

--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
 	}
 
 	/* Style the tab content */
-	.tabcontent {
-		display: none;
-		padding: 6px 12px;
-		border: 1px solid #ccc;
-		border-top: none;
+	div.tabcontent {
+		position: absolute; 
+		top: 100px; 
+		left: 0; 
+		right: 0; 
+		bottom: 0; 
 	}
+	.tabcontent iframe{
+		display: block;
+		width: 100%; 
+		height: 100%; 
+		border: none;
+	}
+	
 	
 	</style>
 </head>
