--- a/SwitchRinger.html
+++ b/SwitchRinger.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div id="app" class="container" @load="getRingerOn()">
-	<h3 class="text-center">List of lit rooms</h3>
+	<h3 class="text-center">List of noisy rooms</h3>
 	<table class="table">
 		<thead><tr>
 			<th scope="col">Room id</th>
