added an app div in index.html

--- a/index.html
+++ b/index.html
@@ -52,24 +52,26 @@
 	</style>
 </head>
 <body>
-	<div class="tab">
-		<button class="tablinks" onclick="openTab('Building')">Building</button>
-		<button class="tablinks" onclick="openTab('Room')">Room</button>
-		<button class="tablinks" onclick="openTab('switchLight')">switchLight</button>
-		<button class="tablinks" onclick="openTab('switchRinger')">switchRinger</button>
-	</div>
-	
-	<div id="Building" class = "tabcontent">
-		<iframe src="Building.html"></iframe>
-	</div>
-	<div id="Room" class = "tabcontent">
-		<iframe src="Rooms.html"></iframe>
-	</div>
-	<div id="switchLight" class = "tabcontent">
-		<iframe src="SwitchLight.html"></iframe>
-	</div>
-	<div id="switchRinger" class = "tabcontent">
-		<iframe src="SwitchRinger.html"></iframe>
+	<div id="app" class="container">
+		<div class="tab">
+			<button class="tablinks" onclick="openTab('Building')">Building</button>
+			<button class="tablinks" onclick="openTab('Room')">Room</button>
+			<button class="tablinks" onclick="openTab('switchLight')">switchLight</button>
+			<button class="tablinks" onclick="openTab('switchRinger')">switchRinger</button>
+		</div>
+		
+		<div id="Building" class = "tabcontent">
+			<iframe src="Building.html"></iframe>
+		</div>
+		<div id="Room" class = "tabcontent">
+			<iframe src="Rooms.html"></iframe>
+		</div>
+		<div id="switchLight" class = "tabcontent">
+			<iframe src="SwitchLight.html"></iframe>
+		</div>
+		<div id="switchRinger" class = "tabcontent">
+			<iframe src="SwitchRinger.html"></iframe>
+		</div>
 	</div>
 	
 	
