--- a/Buildings.html
+++ b/Buildings.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <title>Buildings display</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
+
 <body>
+	<div id="app" class="container">
+	<h3 class="text-center">List of buildings</h3>
+	<table class="table">
+		<thead><tr>
+			<th scope="col">Building id</th>
+			<th scope="col">
+			<select v-model="selectedBuilding" class="version-select">
+							<option disabled value="">Please select one</option>
+							<template v-for="building in buildings">
+							<option>{{building.id}}</option></template>
+							</select></th>
+			<th><button class="bgtn btn-light" @click="switchLight2(selectedRoom)">
+						Turn off
+					</button></th>
+		</tr></thead>
+	</table>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/vue"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="js/request.js"></script>
 </body>
 </html>
