--- a/Buildings.html
+++ b/Buildings.html
@@ -6,6 +6,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+	<style>
+	div.iframe_container {
+		position: absolute; 
+		top: 100px; 
+		left: 0; 
+		right: 0; 
+		bottom: 0; 
+	}
+	
+	.iframe_container iframe{
+		display: block;
+		width: 100%; 
+		height: 100%; 
+		border: none;
+	}
+	</style>
+	
+	
 </head>
 
 <body>
@@ -13,20 +32,56 @@
 	<h3 class="text-center">List of buildings</h3>
 	<table class="table">
 		<thead><tr>
-			<th scope="col">Building id</th>
+			<th scope="col">Building name</th>
 			<th scope="col">
 			<select v-model="selectedBuilding" class="version-select">
 							<option disabled value="">Please select one</option>
 							<template v-for="building in buildings">
-							<option>{{building.id}}</option></template>
+							<option>{{building.name}}</option></template>
 							</select></th>
-			<th><button class="bgtn btn-light" @click="switchLight2(selectedRoom)">
-						Turn off
-					</button></th>
 		</tr></thead>
 	</table>
+	<div class="iframe_container">
+		<h3 class="text-center">List of rooms in {{selectedBuilding}}</h3>
+		<table class="table">
+		<thead><tr>
+			<th scope="col">#</th>
+			<th scope="col">Light Status</th>
+			<th scope="col">Light Level</th>
+			<th scope="col">Ringer status</th>
+			<th scope="col">Noise Level</th>
+			<th scope="col">Switch Light</th>
+			<th scope="col">Switch Ringer</th>
+		</tr></thead>
+		<tbody>
+			<form action="">
+			<template v-for="room in rooms">
+				<tr>
+					<template v-if="isInSelectedBuilding(room.id)">
+						<th scope="row">{{room.id}}</th>
+						<td><div v-if="room.light.status == 'ON'"><img src="img/light-on.png"></div>
+							<div v-else-if="room.light.status == 'OFF'"><img src="img/light-off.png"></div>
+						</td>
+						<td>{{room.light.level}}</td>
+						<td><div v-if="room.noise.status == 'ON'"><img src="img/ringer-on.png"></div>
+							<div v-else-if="room.noise.status == 'OFF'"><img src="img/ringer-off.png"></div>
+						</td>
+						<td>{{room.noise.level}}</td>
+						<td><button class="bgtn btn-light" @click="switchLight2(room.id)">
+								<img src="img/switch.png" width="50">
+							</button></td>
+						<td><button class="bgtn btn-light" @click="switchRinger2(room.id)">
+							<img src="img/switch.png" width="50">
+							</button></td>
+					</template>
+				</tr>
+			</template>
+			</form>	
+		</tbody>
+		</table>
 	</div>
-
+	</div>
+	
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
